[metadata]
name = plover_fifo_commands
version = 0.1.0
description = Plugin which allows other applications to issue engine commands to plover
long_description = file: README.rst
author = Luke Silva
author_email = goldenscruff@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/LukeSilva/plover_fifo_commands
classifiers =
        Development Status :: 4 - Beta
        Environment :: Plugins
        Intended Audience :: End Users/Desktop
        License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
        setuptools>=34.4.0
        setuptools-scm
install_requires =
        plover>=4.0.0.dev1
py_modules =

        plover_fifo_commands

[options.entry_points]
plover.linux.extension =
        fifo_commands = plover_fifo_commands:FIFOCommands

[bdist_wheel]
universal = 1

#